tests/fixtures/invalid/divmod_set_bool.py
# Cannot call divmod() with Set[int], Bool
x = divmod({1, 2, 3}, True)
